rest/chat/v1/README.md
# Go API client for openapi

This is the public Twilio REST API.

## Overview
This API client was generated by the [OpenAPI Generator](https://openapi-generator.tech) project.  By using the [OpenAPI-spec](https://www.openapis.org/) from a remote server, you can easily generate an API client.

- API version: 5.15.0
- Package version: 1.0.0
- Build package: com.twilio.oai.TwilioGoGenerator
For more information, please visit [https://support.twilio.com](https://support.twilio.com)

## Installation

Install the following dependencies:

```shell
go get github.com/stretchr/testify/assert
go get golang.org/x/net/context
```

Put the package under your project folder and add the following in import:

```golang
import "./openapi"
```

## Documentation for API Endpoints

All URIs are relative to *http://localhost*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*DefaultApi* | [**CreateChannel**](docs/DefaultApi.md#createchannel) | **Post** /v1/Services/{ServiceSid}/Channels | 
*DefaultApi* | [**CreateCredential**](docs/DefaultApi.md#createcredential) | **Post** /v1/Credentials | 
*DefaultApi* | [**CreateInvite**](docs/DefaultApi.md#createinvite) | **Post** /v1/Services/{ServiceSid}/Channels/{ChannelSid}/Invites | 
*DefaultApi* | [**CreateMember**](docs/DefaultApi.md#createmember) | **Post** /v1/Services/{ServiceSid}/Channels/{ChannelSid}/Members | 
*DefaultApi* | [**CreateMessage**](docs/DefaultApi.md#createmessage) | **Post** /v1/Services/{ServiceSid}/Channels/{ChannelSid}/Messages | 
*DefaultApi* | [**CreateRole**](docs/DefaultApi.md#createrole) | **Post** /v1/Services/{ServiceSid}/Roles | 
*DefaultApi* | [**CreateService**](docs/DefaultApi.md#createservice) | **Post** /v1/Services | 
*DefaultApi* | [**CreateUser**](docs/DefaultApi.md#createuser) | **Post** /v1/Services/{ServiceSid}/Users | 
*DefaultApi* | [**DeleteChannel**](docs/DefaultApi.md#deletechannel) | **Delete** /v1/Services/{ServiceSid}/Channels/{Sid} | 
*DefaultApi* | [**DeleteCredential**](docs/DefaultApi.md#deletecredential) | **Delete** /v1/Credentials/{Sid} | 
*DefaultApi* | [**DeleteInvite**](docs/DefaultApi.md#deleteinvite) | **Delete** /v1/Services/{ServiceSid}/Channels/{ChannelSid}/Invites/{Sid} | 
*DefaultApi* | [**DeleteMember**](docs/DefaultApi.md#deletemember) | **Delete** /v1/Services/{ServiceSid}/Channels/{ChannelSid}/Members/{Sid} | 
*DefaultApi* | [**DeleteMessage**](docs/DefaultApi.md#deletemessage) | **Delete** /v1/Services/{ServiceSid}/Channels/{ChannelSid}/Messages/{Sid} | 
*DefaultApi* | [**DeleteRole**](docs/DefaultApi.md#deleterole) | **Delete** /v1/Services/{ServiceSid}/Roles/{Sid} | 
*DefaultApi* | [**DeleteService**](docs/DefaultApi.md#deleteservice) | **Delete** /v1/Services/{Sid} | 
*DefaultApi* | [**DeleteUser**](docs/DefaultApi.md#deleteuser) | **Delete** /v1/Services/{ServiceSid}/Users/{Sid} | 
*DefaultApi* | [**FetchChannel**](docs/DefaultApi.md#fetchchannel) | **Get** /v1/Services/{ServiceSid}/Channels/{Sid} | 
*DefaultApi* | [**FetchCredential**](docs/DefaultApi.md#fetchcredential) | **Get** /v1/Credentials/{Sid} | 
*DefaultApi* | [**FetchInvite**](docs/DefaultApi.md#fetchinvite) | **Get** /v1/Services/{ServiceSid}/Channels/{ChannelSid}/Invites/{Sid} | 
*DefaultApi* | [**FetchMember**](docs/DefaultApi.md#fetchmember) | **Get** /v1/Services/{ServiceSid}/Channels/{ChannelSid}/Members/{Sid} | 
*DefaultApi* | [**FetchMessage**](docs/DefaultApi.md#fetchmessage) | **Get** /v1/Services/{ServiceSid}/Channels/{ChannelSid}/Messages/{Sid} | 
*DefaultApi* | [**FetchRole**](docs/DefaultApi.md#fetchrole) | **Get** /v1/Services/{ServiceSid}/Roles/{Sid} | 
*DefaultApi* | [**FetchService**](docs/DefaultApi.md#fetchservice) | **Get** /v1/Services/{Sid} | 
*DefaultApi* | [**FetchUser**](docs/DefaultApi.md#fetchuser) | **Get** /v1/Services/{ServiceSid}/Users/{Sid} | 
*DefaultApi* | [**ListChannel**](docs/DefaultApi.md#listchannel) | **Get** /v1/Services/{ServiceSid}/Channels | 
*DefaultApi* | [**ListCredential**](docs/DefaultApi.md#listcredential) | **Get** /v1/Credentials | 
*DefaultApi* | [**ListInvite**](docs/DefaultApi.md#listinvite) | **Get** /v1/Services/{ServiceSid}/Channels/{ChannelSid}/Invites | 
*DefaultApi* | [**ListMember**](docs/DefaultApi.md#listmember) | **Get** /v1/Services/{ServiceSid}/Channels/{ChannelSid}/Members | 
*DefaultApi* | [**ListMessage**](docs/DefaultApi.md#listmessage) | **Get** /v1/Services/{ServiceSid}/Channels/{ChannelSid}/Messages | 
*DefaultApi* | [**ListRole**](docs/DefaultApi.md#listrole) | **Get** /v1/Services/{ServiceSid}/Roles | 
*DefaultApi* | [**ListService**](docs/DefaultApi.md#listservice) | **Get** /v1/Services | 
*DefaultApi* | [**ListUser**](docs/DefaultApi.md#listuser) | **Get** /v1/Services/{ServiceSid}/Users | 
*DefaultApi* | [**ListUserChannel**](docs/DefaultApi.md#listuserchannel) | **Get** /v1/Services/{ServiceSid}/Users/{UserSid}/Channels | 
*DefaultApi* | [**UpdateChannel**](docs/DefaultApi.md#updatechannel) | **Post** /v1/Services/{ServiceSid}/Channels/{Sid} | 
*DefaultApi* | [**UpdateCredential**](docs/DefaultApi.md#updatecredential) | **Post** /v1/Credentials/{Sid} | 
*DefaultApi* | [**UpdateMember**](docs/DefaultApi.md#updatemember) | **Post** /v1/Services/{ServiceSid}/Channels/{ChannelSid}/Members/{Sid} | 
*DefaultApi* | [**UpdateMessage**](docs/DefaultApi.md#updatemessage) | **Post** /v1/Services/{ServiceSid}/Channels/{ChannelSid}/Messages/{Sid} | 
*DefaultApi* | [**UpdateRole**](docs/DefaultApi.md#updaterole) | **Post** /v1/Services/{ServiceSid}/Roles/{Sid} | 
*DefaultApi* | [**UpdateService**](docs/DefaultApi.md#updateservice) | **Post** /v1/Services/{Sid} | 
*DefaultApi* | [**UpdateUser**](docs/DefaultApi.md#updateuser) | **Post** /v1/Services/{ServiceSid}/Users/{Sid} | 


## Documentation For Models

 - [ChatV1Credential](docs/ChatV1Credential.md)
 - [ChatV1CredentialReadResponse](docs/ChatV1CredentialReadResponse.md)
 - [ChatV1CredentialReadResponseMeta](docs/ChatV1CredentialReadResponseMeta.md)
 - [ChatV1Service](docs/ChatV1Service.md)
 - [ChatV1ServiceChannel](docs/ChatV1ServiceChannel.md)
 - [ChatV1ServiceChannelInvite](docs/ChatV1ServiceChannelInvite.md)
 - [ChatV1ServiceChannelInviteReadResponse](docs/ChatV1ServiceChannelInviteReadResponse.md)
 - [ChatV1ServiceChannelMember](docs/ChatV1ServiceChannelMember.md)
 - [ChatV1ServiceChannelMemberReadResponse](docs/ChatV1ServiceChannelMemberReadResponse.md)
 - [ChatV1ServiceChannelMessage](docs/ChatV1ServiceChannelMessage.md)
 - [ChatV1ServiceChannelMessageReadResponse](docs/ChatV1ServiceChannelMessageReadResponse.md)
 - [ChatV1ServiceChannelReadResponse](docs/ChatV1ServiceChannelReadResponse.md)
 - [ChatV1ServiceReadResponse](docs/ChatV1ServiceReadResponse.md)
 - [ChatV1ServiceRole](docs/ChatV1ServiceRole.md)
 - [ChatV1ServiceRoleReadResponse](docs/ChatV1ServiceRoleReadResponse.md)
 - [ChatV1ServiceUser](docs/ChatV1ServiceUser.md)
 - [ChatV1ServiceUserReadResponse](docs/ChatV1ServiceUserReadResponse.md)
 - [ChatV1ServiceUserUserChannel](docs/ChatV1ServiceUserUserChannel.md)
 - [ChatV1ServiceUserUserChannelReadResponse](docs/ChatV1ServiceUserUserChannelReadResponse.md)
 - [CreateChannelRequest](docs/CreateChannelRequest.md)
 - [CreateCredentialRequest](docs/CreateCredentialRequest.md)
 - [CreateInviteRequest](docs/CreateInviteRequest.md)
 - [CreateMemberRequest](docs/CreateMemberRequest.md)
 - [CreateMessageRequest](docs/CreateMessageRequest.md)
 - [CreateRoleRequest](docs/CreateRoleRequest.md)
 - [CreateServiceRequest](docs/CreateServiceRequest.md)
 - [CreateUserRequest](docs/CreateUserRequest.md)
 - [UpdateChannelRequest](docs/UpdateChannelRequest.md)
 - [UpdateCredentialRequest](docs/UpdateCredentialRequest.md)
 - [UpdateMemberRequest](docs/UpdateMemberRequest.md)
 - [UpdateMessageRequest](docs/UpdateMessageRequest.md)
 - [UpdateRoleRequest](docs/UpdateRoleRequest.md)
 - [UpdateServiceRequest](docs/UpdateServiceRequest.md)
 - [UpdateUserRequest](docs/UpdateUserRequest.md)


## Documentation For Authorization



## accountSid_authToken

- **Type**: HTTP basic authentication

Example

```golang
auth := context.WithValue(context.Background(), sw.ContextBasicAuth, sw.BasicAuth{
    UserName: "username",
    Password: "password",
})
r, err := client.Service.Operation(auth, args)
```


## Author

support@twilio.com

